added image carousel added profile image

--- a/album.css
+++ b/album.css
@@ -9,7 +9,7 @@
 }
 
 #nav1 {
-    padding-top: 20%;
+    /*padding-top: 20%;*/
     padding-bottom: 20%;
     position:fixed;
     display: inline-block;
