--- a/album.css
+++ b/album.css
@@ -4,26 +4,74 @@
     max-width: 1200px;  /*or 950px*/ 
     background-color: white;    
 }
+.name { text-align:center; }
+
+.nav-item a{
+    color: black;
+}
+
+.nav-item a:hover{
+    color:grey;
+}
+
+.active a {
+    font-weight: bold;
+}
+
+.nav-item:after{}
+
 #c1 {
-    padding-top:10px;
+    padding-top: 10px;
     margin-left: 20%;
 }
 
-#nav1 {
-    /*padding-top: 20%;*/
-    padding-bottom: 20%;
-    position:fixed;
-    display: inline-block;
-    float: left;
-    vertical-align: middle;
-    width: 256px;
-    height:initial;
+#panelGroup {
+    /*align-items:inherit;*/
+    display:block;
+    position:relative;
+    color: gray;
 }
 
-#textName {
-    position: center;
-    display: inline-block;
+.panelText{
+    padding: 10px;
+    border:1px solid;
+    border-color:lightgray;
 }
+
+.btn-success-panel {
+    border: none;
+    background-color: #f2f3f7;
+    border-color: transparent;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.btn-success-panel:focus{
+    box-shadow:none;
+}
+    .btn-success-panel:hover {
+        outline: none;
+    }
+/*change color of expanded panel button section*/
+button[aria-expanded="true"] {
+    transition: .3s transform ease-in-out;
+    color: white;
+    background-color: #42DCA3;
+    outline: none;
+}
+.collapse#panel{
+    transition:ease 0.5s;
+}
+
+#nav1 {
+        padding-bottom: 20%;
+        position: fixed;
+        display: inline-block;
+        float: left;
+        vertical-align: middle;
+        width: 256px;
+        height: initial;
+    }
 
 .carousel-inner img {
     height: auto;
@@ -35,6 +83,96 @@
 #buttonMenu {
     background-color: transparent;
 }
+/* Timeline */
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    float:left;
+    position: relative;
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
+    .timeline::after {
+        content: '';
+        position: absolute;
+        width: 6px;
+        background-color: deepskyblue;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        margin-left: -3px;
+    }
+
+/* Place the container to the left */
+.left {
+    left: 0;
+}
+
+/* Place the container to the right */
+.right {
+    left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: ghostwhite;
+    position: relative;
+    border-radius: 6px;
+}
+
+/* Container around content */
+.container_t {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 75%;
+}
+
+    /* The circles on the timeline */
+    .container_t::after {
+        content: '';
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        left: 2px;
+        background-color: white;
+        border: 4px solid #FF9F55;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1;
+    }
+    /* Make sure that all arrows are pointing leftwards */
+    .container_t::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+    }
+
+/* Make sure all circles are at the same spot */
+.left::after {
+    left: 15px;
+}
+
+/* Make all right containers behave like the left ones */
+.right {
+    left: 0%;
+}
 
 .col-md-4 {
     padding-top: 10px
@@ -43,7 +181,7 @@
 .img-circle {
     margin: 10px;
     border-radius: 50%;
-    /*display: inline-block;*/
+    position:center;
     border: 2px;
     width: 175px;
     height: 175px;
