--- a/album.css
+++ b/album.css
@@ -1,6 +1,6 @@
 /*background color*/
 body{
-    background-color:floralwhite;
+    background-color:white;
 }
 .container {
     margin-right: 10px;
@@ -65,6 +65,7 @@ body{
 #c1 {
     padding-top: 10px;
     margin-left: 18%;
+    /*animation:fadeInLeftBig 1s ease-out;*/
 }
 
 #panelGroup {
@@ -272,7 +273,7 @@ button[aria-expanded="true"] {
     background-color:deepskyblue;
 }
 /* ANIMATIONS */
-/* Slide Up animation */
+/* Slide Up */
 .SlideUp {
     height: 0;
 }
@@ -286,7 +287,7 @@ button[aria-expanded="true"] {
         transform: translateY(0%);
     }
 }
-
+/* Fade In Right */
 @-webkit-keyframes fadeInRight {
     from {
         opacity: 0;
@@ -323,6 +324,38 @@ button[aria-expanded="true"] {
     -webkit-animation-name: fadeInRight;
     animation-name: fadeInRight;
 }
+/* Fade In Left Big*/
+@-webkit-keyframes fadeInLeftBig {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(-2000px, 0, 0);
+        transform: translate3d(-2000px, 0, 0);
+    }
 
+    to {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+
+@keyframes fadeInLeftBig {
+    from {
+        opacity: 0;
+        -webkit-transform: translate3d(-2000px, 0, 0);
+        transform: translate3d(-2000px, 0, 0);
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+
+.fadeInLeftBig {
+    -webkit-animation-name: fadeInLeftBig;
+    animation-name: fadeInLeftBig;
+}
 
   
