expanded panel within research experience (to show that there is more info.)

--- a/album.css
+++ b/album.css
@@ -104,11 +104,12 @@ body{
     color: gray;
 }
 
-.panelText{
+.panelText {
     padding: 10px;
-    border:1px solid;
-    border-color:lightgray;
-    background-color:white;
+    border: 1px solid;
+    border-color: lightgray;
+    background-color: white;
+    animation: fadeInRight 1s ease-out;
 }
 
 .btn-success-panel {
