--- a/album.css
+++ b/album.css
@@ -31,21 +31,62 @@ body{
     
 }
 .contactForm {
-    width: 320px;
-    float: left;
+    width: 500px;
+    float:left;
     top: 20px;
-    right: 300px;
+    right: 500px;
     display: inline-block;
     animation: fadeInRight 1s ease-out;
 }
+
+.contactForm input[type=submit] {
+    background-color: rgb(74, 166, 228);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: left;
+}
+.contactForm input[type=text], select, textarea {
+    width: 90%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+.contactForm input[type=submit]:hover {
+    background-color: #388be9;
+    
+}
 .contactForm input{
     margin:10px;
+
 }.contactForm textarea{
+    width: 90%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
      margin:10px;
+
  }
 .contactInfo {
     display: inline-block;
-    width: 320px;
+    width: 500px;
     animation: fadeInRight 1s ease-out;
 }
 .contactInfo img {
