--- a/album.css
+++ b/album.css
@@ -456,4 +456,24 @@ button[aria-expanded="true"] {
     animation-name: fadeInLeftBig;
 }
 
+/*publications*/
+#publications-overview {
+    width:1100px;
+    height: 100%;
+    display: block;
+    left: 10px;
+    padding: 10px;
+    max-width: 100%;
+    background-color: #eee6ff;
+    animation: fadeInRight 1s ease-out;
+    border-style: solid;
+    border-color: #8a00e6;
+    border-radius: 5px;
+}
+.grow:hover
+{
+        -webkit-transform: scale(1.02);
+        -ms-transform: scale(1.02);
+        transform: scale(1.02);
+}
   
