add small stuffs look better

--- a/album.css
+++ b/album.css
@@ -470,6 +470,15 @@ button[aria-expanded="true"] {
     border-color: #8a00e6;
     border-radius: 5px;
 }
+#home
+{
+    width:800px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: rgb(74, 139, 236);
+            border-width: 5px 5px 5px 5px;
+      
+    }
 .grow:hover
 {
         -webkit-transform: scale(1.01);
