--- a/projects.css
+++ b/projects.css
@@ -6,6 +6,9 @@
     padding-right: 30px;
     max-width: 750px;
     animation: fadeInRight 1s ease-out;
+    
+
+    
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -35,5 +38,18 @@ img {
 
     vertical-align: middle;
     border-style: none;
+
+}
+#project_1 {
+    width:1100px;
+    height: 100%;
+    display: block;
+    left: 10px;
+    padding: 10px;
+    max-width: 100%;
+    background-color: #eee6ff;
+    animation: fadeInRight 1s ease-out;
+    border-style: solid;
+    border-color: #8a00e6;
 
 }
