--- a/album.css
+++ b/album.css
@@ -588,3 +588,15 @@ button[aria-expanded="true"] {
     transition: 0.5s;
     background-position: right center;
     }
+
+    .stackedit__html {
+        margin-bottom: 180px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 30px;
+        padding-right: 30px;
+        max-width: 750px;
+        animation: fadeInRight 1s ease-out;
+        border-style: dashed;
+
+    }
